[package]
name = "clara"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.26"
sea-orm = { version = "^0.9.0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
axum = "0.6.4"
chrono = "0.4.23"
dotenvy = "0.15.6"
tokio = { version = "1.25.0", features = ["full"] }
migration = { path = "./migration" }
serde = { version = "1.0.152", features = ["serde_derive"] }
